# advanced-rag-and-evaluation

./: .gitignore  pyproject.toml  requirements.txt
src/: L1-Advanced_RAG_Pipeline.ipynb  L2.ipynb  default.sqlite  utils.py
src/md_evals/: generated_questions.text
